fixed too much margin issue

--- a/style.css
+++ b/style.css
@@ -98,6 +98,10 @@ h1 {
   text-align: center;
 }
 
+.h1--noMargin {
+  margin: 0;
+}
+
 .navbar {
   width: 100%;
   height: 60px;
@@ -232,13 +236,14 @@ h1 {
 .grid .noDisplay {
   display: none;
 }
-.grid .viewMore {
+
+.viewMore {
   border: none;
   display: block;
   margin: 100px auto 0;
   border-radius: 6px;
 }
-.grid .viewMore:hover {
+.viewMore:hover {
   pointer: cursor;
 }
 
